--- a/src/layout/headers.css
+++ b/src/layout/headers.css
@@ -61,7 +61,7 @@
 .mypage-button,
 .logout-button,
 .login-button {
-  background-color: #29c2b1;
+  background-color: #649AE4;
   color: white;
   border: none;
   padding: 10px 20px;
