--- a/src/output/eval.css
+++ b/src/output/eval.css
@@ -4,7 +4,7 @@
 } 
 .evaluation-title {
     margin-bottom: 40px;
-    border-left: 4px solid #4b6cb7;
+    border-left: 4px solid #649AE4;
     padding-left: 12px;
     font-size: 1.5rem;
     color: #333;
